# agent-notary-layer

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
conformance/negative/: bad-hash-format.json  bad-timestamp.json  bad-ulid.json  extra-field.json  missing-signature.json  wrong-algorithm.json
conformance/positive/: chained-second.json  chained-third.json  minimal.json
docs/: first-pr.md
keys/: did%3Aweb%3Aexample.test%2Fagents%2Fbuyer-1.pub  did%3Aweb%3Aexample.test%2Fagents%2Fseller-1.pub
spec/: RFC-001-receipt-format.md  agent-receipt.schema.json
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/notary/: __init__.py  __main__.py  canonical.py  cli.py  verifier.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_conformance.py  test_verifier.py
