[build-system]
requires = ["hatchling>=1.18,<2"]
build-backend = "hatchling.build"

[project]
name = "notary"
version = "0.1.0"
description = "Reference verifier for the agent-receipt v0.1 schema"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-notary-layer contributors" }]
dependencies = [
    "jsonschema>=4.21,<5",
    "PyNaCl>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
notary = "notary.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notary"]

[tool.hatch.build.targets.wheel.force-include]
"spec/agent-receipt.schema.json" = "notary/_data/agent-receipt.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
